[gd_scene load_steps=7 format=2]

[ext_resource path="res://new_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/assets/Menu-3.png" type="Texture" id=2]
[ext_resource path="res://scenes/briefing_scenes/briefing_end.gd" type="Script" id=3]
[ext_resource path="res://scenes/assets/briefing_mask_white.png" type="Texture" id=4]
[ext_resource path="res://scenes/gui/fader.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "scroll_brief_text"
length = 16.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Control/CenterContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 14.8, 15.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.712, 500 ), Vector2( -5.712, -250 ), Vector2( -5.712, -825 ), Vector2( -5.712, -1825 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Control/CenterContainer2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 12.8, 15.9 ),
"transitions": PoolRealArray( 1, 1, 0.164939, 4 ),
"update": 0,
"values": [ Vector2( 0, 500 ), Vector2( 0, 250 ), Vector2( 0, 500 ), Vector2( 0, 0 ) ]
}

[node name="Briefing" type="Control"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 465, 643 )
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Background"]
anchor_left = 0.113
anchor_top = 0.204
anchor_right = 0.886
anchor_bottom = 0.799
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Background/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.712
margin_top = 500.0
margin_right = -5.26398
margin_bottom = 1597.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/Control/CenterContainer"]
margin_left = 158.0
margin_top = 635.0
margin_right = 633.0
margin_bottom = 818.0
text = "У принца кошелёк большой,
Да я хитёр. Теперь он мой.
Приятель, ты мне удружил
И половину заслужил.
Теперь богаты мы с тобой,
Давай закатим пир горой!"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Background/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 500.0
margin_bottom = 500.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEnd" type="Button" parent="Background/Control/CenterContainer2"]
margin_left = 220.0
margin_top = 141.0
margin_right = 570.0
margin_bottom = 216.0
rect_min_size = Vector2( 350, 75 )
text = "Завершить игру"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
light_mask = 0
margin_left = 367.0
margin_top = 507.0
margin_right = 642.0
margin_bottom = 582.0
rect_min_size = Vector2( 275, 75 )
text = "Пропустить"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fader" parent="." instance=ExtResource( 5 )]

[node name="Light2D" type="Light2D" parent="."]
light_mask = 0
position = Vector2( 511.5, 303 )
scale = Vector2( 0.697049, 0.63583 )
texture = ExtResource( 4 )
texture_scale = 0.75
mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/scroll_brief_text = SubResource( 1 )

[connection signal="gui_input" from="Background" to="." method="_on_Background_gui_input"]
[connection signal="pressed" from="Background/Control/CenterContainer2/ButtonEnd" to="." method="_on_ButtonEnd_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
